--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -11,6 +11,11 @@ footer {
 	text-align: center;
 }
 
+textarea {
+	width: 300px;
+	height: 150px;
+}
+
 section#board_container {
 	background-color: #FFFFE9;
 	margin: 10px;
